[package]
name = "stream_autodj"
version = "0.1.0"
authors = ["Carson McManus <carson.mcmanus1@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rodio = "0.11.0"
rand = "0.7.3"
regex = "1.3.9"
lazy_static = "1.4.0"
proptest = "0.10.0"
