[package]
name = "stream_autodj"
version = "0.1.0"
authors = ["Carson McManus <carson.mcmanus1@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"
lazy_static = "1"
rodio = "0.11.0"
rand = "0.7.3"
proptest = "0.10.0"
clap = "2.33.1"

[profile.release]
lto = true
