[package]
name = "stream_autodj"
version = "0.1.0"
authors = ["Carson McManus <carson.mcmanus1@gmail.com>"]
edition = "2018"
description = "This is the program I use to play background music on my streams"
readme = "README.md"
repository = "https://github.com/dyc3/stream-autodj"
license = "GPL-3.0-only"
publish = false

[dependencies]
regex = "1"
lazy_static = "1"
clap = "2.33"
rodio = "0.11.0"
rand = "0.7.3"
proptest = "0.10.0"
zip = "0.5.6"

[profile.dev.package."*"]
opt-level = 2

[profile.release.package."*"]
codegen-units = 1

[profile.release]
codegen-units = 1
lto = true
